# lab

./: .gitignore  .gitmodules  README.md
c/: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  CMakeSettings.json
c/cmake/Modules/: MacroEnsureOutOfSourceBuild.cmake
c/dep/: CMakeLists.txt
c/src/: CMakeLists.txt  main.c
c/src/lib/: CMakeLists.txt
c/src/lib/morpha/: CMakeLists.txt
c/src/lib/morpha/lex/: CMakeLists.txt  lex.c  lex.h
c/src/lib/morpha/read/: CMakeLists.txt  read.h
c/test/morpha/: CMakeLists.txt
c/test/morpha/lex/: CMakeLists.txt  lex_test.c  main_test.c  main_test.h
c/test/morpha/read/: CMakeLists.txt
go/src/glyph/: glyph_test.go
go/src/morph/: morph.go  morph_test.go  names.md
rust/: Cargo.toml
rust/morpha/: Cargo.toml
rust/morpha/src/: lib.rs  lib_test.rs
rust/morpha/src/lex/: lexer.rs  mod.rs  mod_test.rs
rust/morpha/src/lex/accum/: mod.rs  mod_test.rs
rust/morpha/tests/: morpha_test.rs
rust/slcr/src/: lib.rs  loader.rs  lua.rs  repl.rs
src/glyph/: glyph_test.go
src/type/: type_test.go
